# specex

./: .gitignore  .lock-wafbuild  CHANGES.md  CMakeLists.txt  INSTALL  INSTALL.md  LICENSE.md  Makefile  README  README.md  TODO  TODO.md  setup.cfg  setup.py  wscript
.github/workflows/: python-package.yml
data/: README.md  blended.sh  lamplines-specex.par  merge.sh  nist_CdI.txt  skylines_supplement.txt  specex_linelist_desi.txt
doc/: gauss-hermite-psf-datamodel.rst
docs/: gauss-hermite-psf-datamodel.rst
etc/: specex.module
py/specex/: __init__.py  _version.py  io.py  qa.py  specex.py
py/specex/data/: README.md  merge.sh  nist_ArI.txt  nist_HI.txt  nist_HeI.txt  nist_HgI.txt  nist_HgII.txt  nist_NeI.txt  specex_linelist_boss.txt  specex_linelist_desi.txt
py/specex/test/: test_specex.py
python/: dump_nist.py  header.py  specex_air_to_vacuum.py  specex_apply_flatfield.py  specex_arc_line_template.py  specex_cholesky.py  specex_coaddition.py  specex_compare_flats.py  specex_compute_flatfield.py  specex_compute_sky.py  specex_convert_wavelength_air_to_vacuum.py  specex_desi_psf_fit_and_merge.py  specex_dust_extinction.py  specex_flux_calibration.py  specex_mean_psf.py  specex_merge_coadded.py  specex_plot_psf_params.py  specex_plot_spectra.py  specex_psf_mask.py  specex_psf_traces.py  specex_read_table.py  specex_stack_psf.py  specex_test_cholesky.py  specex_test_ctypes.py  specex_write_json.py
specex_pybind/: CMakeLists.txt  README.md  README.rst  setup.py  setup_stools.py
specex_pybind/py/specex/: __init__.py  myargs.py  mymath.py
specex_pybind/py/specex/scripts/: specex_funcs.py
specex_pybind/src/: .#myargs.h  _pyspecex.cpp  mymath.cpp  specex_brent.cc  specex_desi.h  specex_desi_main.cc  specex_desi_main_noclass.cc  specex_fit_psf.cc  specex_gauss_hermite_psf.h  specex_hat_hermite_psf.h  specex_hermite.h  specex_legendre.h  specex_linalg.cc  specex_message.h  specex_model_image.cc  specex_model_image.h  specex_options.cc  specex_options.h  specex_psf.cc  specex_psf.h  specex_psf_fitter.h  specex_psf_io.cc  specex_psf_io_gauss_hermite_psf_fits_1.cc  specex_psf_io_gauss_hermite_psf_fits_3.cc  specex_psf_io_gauss_hermite_psf_fits_3.h  specex_psfpy.h  specex_pyfitting.cc  specex_pyfitting.h  specex_pyimage.h  specex_pyio.cc  specex_pyio.h  specex_pyoptions.cc  specex_pyoptions.h  specex_pypsf.cc  specex_pypsf.h  specex_serialization_implement.h  specex_spot_array.h  specex_stamp.h  specex_tokens.cc  specex_trace.cc  (+2 more)
src/: Makefile  _libspecex.cpp  _version.h  ext.cpp  ext.h  findit.py  harp_tdefs.h  myargs.cpp  myargs.h  mymath.h  specex_blas.c  specex_blas.h  specex_brent.cc  specex_brent.h  specex_desi.h  specex_desi_io.cc  specex_desi_maine.cc  specex_fits.cc  specex_fits.h  specex_gauss_hermite_psf.cc  specex_gauss_hermite_psf.h  specex_gauss_hermite_two_psf.h  specex_hermite.cc  specex_hermite.h  specex_image_data.cc  specex_image_data.h  specex_image_data_base.cc  specex_image_data_base.h  specex_lamp_lines_utils.cc  specex_lapack.c  specex_lapack.h  specex_legendre.cc  specex_legendre.h  specex_linalg.cc  specex_linalg.h  specex_linalg_mod.cc  specex_mask.cc  specex_mask.h  specex_message.cc  specex_message.h  (+46 more)
src/apps/: Makefile  boss_psf_fit.cc  specex_cross_profile.cc  specex_desi_psf_fit.cc  specex_extract.cc  specex_fiber_profile.cc  specex_flexure_fit_for_flat.cc  specex_flexure_fit_for_science.cc  specex_merge_psf.cc  specex_merge_spot.cc  specex_psf_fit.cc  specex_psf_residuals.cc  specex_spot_list.cc  specex_version.cc  wscript
src/deboosted/: specex_desi_io.cc  specex_spot.h
src/deboosted_headers/: specex_desi_io.h  specex_psf_io_gauss_hermite_psf_fits_3.h  specex_psf_io_gauss_hermite_two_psf_fits_2.h  specex_tokens.h
src/harp/: config.h
src/harp/data/: git-version.cpp  harp_fits.cpp
src/harp/data/harp/: fits.hpp
src/harp/math/harp/: linalg.hpp
src/harp/plugins/: plugin_register.cpp
src/plugin/: Makefile  harp_plugin_specex.cc  harp_plugin_specex.cc~  harp_plugin_specex.h  harp_plugin_specex_reg.cc  wscript  wscript~
src/pybind11/docs/: requirements.txt
src/tests/: Makefile  specex_psf_image.cc  specex_test_boost.cc  specex_test_derivatives.cc  specex_test_derivatives2.cc  specex_test_image.cc  specex_test_psf_io.cc  specex_test_psf_specter_io.cc  specex_test_psf_xml_io.cc  wscript
src/unhrp/: specex_unhrp.cc  unhrp.h  unhrp_fits.cpp
testing/: compare_psf.py  compare_psf_orig.py  full-test-io_refactor.sh  test-io_refactor.sh  test_specex.py
