[metadata]
name = specex
version = attr: specex.__version__
author = DESI Collaboration
author_email = desi-data@desi.lbl.gov
license = BSD-3-Clause
license_files = LICENSE.md
url = https://github.com/desihub/specex
description = DESI PSF Fitting
long_description = file: README.md
long_description_content_type = text/markdown
edit_on_github = True
github_project = desihub/specex
; classifiers =
;     Development Status :: 5 - Production/Stable
;     Environment :: Console
;     Intended Audience :: Science/Research
;     Operating System :: OS Independent
;     Programming Language :: Python :: 3
;     Topic :: Scientific/Engineering :: Astronomy
;     Topic :: System :: Software Distribution
;     Topic :: Utilities

[options]
zip_safe = False
package_dir =
    =py
# find_namespace avoids a warning about data directories when building packages.
packages = find_namespace:
include_package_data = True
python_requires = >=3.10
# setup_requires = setuptools_scm
install_requires =
    desiutil
    fitsio
    numpy
;    desispec
; scripts =
;     bin/specex

; [options.entry_points]
; console_scripts =
;     specex = specex.specex:main

; [options.extras_require]
; all =
;     healpy
;     matplotlib
;     scipy
;     speclite
; test =
;     desiutil[all]
;     pytest
; coverage =
;     desiutil[all]
;     pytest-cov
;     coveralls
; doc =
;     Sphinx
;     sphinx-rtd-theme

[options.package_data]
specex = data/*
; specex.test = t/*

[options.packages.find]
where = py
exclude = .github/*
